wk1 ponder final

--- a/ponder_wk1/meta-css.css
+++ b/ponder_wk1/meta-css.css
@@ -17,6 +17,15 @@ img {
     margin: 0 auto;
 }
 
+p {
+    color: blue;
+}
+
+h1 {
+    letter-spacing: 10px;
+}
+
+
 h1, h2, p {
     text-align: center;
 }
