--- a/ponder_wk1/responsive.css
+++ b/ponder_wk1/responsive.css
@@ -30,11 +30,18 @@ section {
 nav a {
     padding: 20px;
     color: black;
-    display: none;  
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    border-top: 1px solid gray;
 }
+.hide {
+    display: none;
+}
+
 nav a:hover {
     text-decoration: none;
-    color: #616061;
+    color: #110511;
 }
 .menu-btn {
     cursor: pointer;
@@ -46,7 +53,19 @@ nav a:hover {
     height: 4px;
     background-color: black;
     margin: 5px 0;
+    transition: 0.4s;
+
 }
+
+.change .bar1 {
+  transform: translate(0, 9px) rotate(-45deg);
+}
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  transform: translate(0, -9px) rotate(45deg);
+}
+
 footer {
     text-align: center;
 }
@@ -59,6 +78,7 @@ footer {
 
     nav a{
         display: inline;
+        border: none;
     }
 
     .menu-btn {
